examples/test/testpolicy6285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6285
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key15: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value12
          key17: value2
          key48: value9
      podSelector:
        matchLabels:
          key0: value16
          key21: value10
          key4: value28
